# zed-http

./: .gitignore  Cargo.toml  README.md  extension.toml  flake.nix
docs/superpowers/plans/: 2026-05-28-httpyac-rs-cli.md
http-lsp/: Cargo.toml
http-lsp/src/: backend.rs  cache.rs  main.rs  request_index.rs  response_format.rs
httpyac-rs/: Cargo.toml
httpyac-rs/src/: error.rs  exchange.rs  lib.rs  send.rs
httpyac-rs/src/cli/: mod.rs  oauth2.rs  proxy.rs  send.rs
httpyac-rs/tests/: cli_smoke.rs
languages/http/: highlights.scm  injections.scm  outline.scm  runnables.scm
patches/: 0001-fix-comment-and-separator-handling.patch
src/: http.rs  lib.rs
zed-extension/: Cargo.toml
zed-extension/src/: http.rs
