[package]
name = "zed-http-lsp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "LSP for .http files that delegates execution to httpyac"

[[bin]]
name = "zed-http-lsp"
path = "src/main.rs"

[dependencies]
httpyac = { path = "../httpyac-rs", package = "httpyac-rs" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dashmap = "6"
dirs = "5"
percent-encoding = "2"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
