[package]
name = "httpyac-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust wrapper around the httpyac CLI for sending .http requests"

[lib]
name = "httpyac"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
